# BE-Kerjasama

./: .env  .gitignore  Cargo.toml
src/: app.rs  lib.rs  main.rs  midleware.rs  path.rs
src/analytics/: komoditas_utama.rs  list_year.rs  mod.rs  trade_balance.rs  tren_ekspor_impor.rs  tren_komoditas_utama.rs
src/auth/: login.rs  mod.rs  register.rs
src/dashboard/: add_agenda.rs  add_document.rs  delete_agenda.rs  delete_document.rs  get_agenda.rs  get_document.rs  kerjasama_proses_berlaku.rs  list_direktorat.rs  list_kerjasama.rs  list_perundingan.rs  mod.rs  top_three_category.rs  total_kerjasama.rs  utilitas_kerjasama.rs
src/handler/: add_agenda.rs  get_agenda.rs  mod.rs
src/helper/: clickhouse.rs  debug.rs  export_writter.rs  func.rs  mod.rs  structs.rs
