[package]
name = "kerjasama"
version = "0.1.0"
edition = "2021"
default-run = "kerjasama"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0"
actix-web = "4.2.1"
chrono = "0.4"
chrono-tz = "0.8.4" 
env_logger = "0.10.0"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
bcrypt = "0.10.1"
jsonwebtoken = "7.1"
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
time = "0.3"
rust_decimal = "1.29"
dotenv = "0.15.0"
anyhow = "1.0"
actix-cors = "0.6.2"
reqwest = { version = "0.11", features = ["cookies", "json", "stream"] }
serde_merge = "0.1.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }